--- a/webapp/view/VPInvoices.view.xml
+++ b/webapp/view/VPInvoices.view.xml
@@ -1,13 +1,13 @@
-<mvc:View displayBlock="true" xmlns:mvc="sap.ui.core.mvc"
-	xmlns:core="sap.ui.core"  xmlns="sap.m"
+<mvc:View displayBlock="true" xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns="sap.m"
 	controllerName="brait_app.controller.VPInvoices">
-	
-		<List headerText="{i18n>productListTitle}"
-			items="{prueba>/Invoices}">
-			<items>
-				<ObjectListItem title="{prueba>ProductName}"
-					number="{prueba>ExtendedPrice}" intro="{prueba>Quantity}" />
-			</items>
-		</List>	
-	
+	<List headerText="{i18n>productListTitle}" items="{prueba>/Invoices}">
+		<items>
+			<ObjectListItem title="{prueba>ProductName}"
+				number="{ 
+					parts: [{path: 'prueba>ExtendedPrice'}, {path: 'view>/currency'}], 
+					type: 'sap.ui.model.type.Currency', 
+					formatOptions: { showMeasure: false } }"
+				numberUnit="{view>/currency}"/>
+		</items>
+	</List>
 </mvc:View>
