--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -6,6 +6,7 @@ xmlns:l="sap.ui.layout"
 xmlns:f="sap.ui.layout.form" 
 xmlns="sap.m"
 controllerName="brait_app.controller.App">
+<Shell>
 <App> 
 	<pages> 
 		<Page title="openSAP - Developing with SAPUI5"> 
@@ -30,4 +31,5 @@ controllerName="brait_app.controller.App">
 		</Page> 
 	</pages> 
 </App> 
+</Shell>	
 </mvc:View> 
