Añadidos controles personalizados

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -12,3 +12,10 @@ html[dir="rtl"] .myAppDemoWT .myCustomButton.sapMBtn {
    color: blue;
    ;
 }
+/*  ProductRating */
+.myAppDemoWTProductRating {
+	padding: 0.75rem;
+}
+.myAppDemoWTProductRating .sapMRI {
+	vertical-align: initial;
+}
