Copia seguridad, antes de cambios en recuperación de los JSON

--- a/webapp/view/VPImages.view.xml
+++ b/webapp/view/VPImages.view.xml
@@ -5,5 +5,6 @@
 			<Image src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/Wikipedia_Hello_World_Graphic.svg/2000px-Wikipedia_Hello_World_Graphic.svg.png" height="600px"/>
 		</pages>
 	</Carousel>
-	<Button text="{i18n>showHelloButtonText}" press="onShowHello"/><Input value="{helloPanel>/recipient/name}" description="Hello {helloPanel>/recipient/name}" valueLiveUpdate="true" width="60%"/>
+	<Button text="{i18n>showHelloButtonText}" press="onShowHello"/>
+	<Input value="{helloPanel>/recipient/name}" description="Hello {helloPanel>/recipient/name}" valueLiveUpdate="true" width="60%"/>
 </mvc:View>
