--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -17,6 +17,9 @@
 									<!--<mvc:XMLView viewName="brait_app.view.VPInvoices"/>-->
 									<App class="myAppDemoWT" id="app"/>
 								</IconTabFilter>
+								<IconTabFilter text="prueba" key="bd">
+								<!--	<mvc:XMLView viewName="brait_app.view.VPInvoices2"/>  -->
+								</IconTabFilter>
 							</items>
 						</IconTabBar>
 					</content>
