--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,23 +1,23 @@
 <mvc:View displayBlock="true" xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout" xmlns:f="sap.ui.layout.form"
 	xmlns="sap.m" controllerName="brait_app.controller.App">
 	<Shell>
-		<App>
+		<App id="principal">
 			<pages>
 				<Page title="openSAP - Developing with SAPUI5">
 					<content>
-						<IconTabBar id="idTopLevelIconTabBar" selectedKey="db" class="sapUiResponsiveContentPadding">
+						<IconTabBar id="idTopLevelIconTabBar" selectedKey="principal" class="sapUiResponsiveContentPadding">
 							<items>
-								<IconTabFilter id="start" text="{i18n>gettingStartedFilter}">
+								<IconTabFilter id="start" text="{i18n>gettingStartedFilter}" key="principal">
 									<mvc:XMLView viewName="brait_app.view.VPImages"/>
 								</IconTabFilter>
 								<IconTabFilter id="layouts" text="{i18n>layoutFilter}">
 									<mvc:XMLView viewName="brait_app.view.Form1"/>
 								</IconTabFilter>
-								<IconTabFilter text="{i18n>dataBindingFilter}" key="db">
+								<IconTabFilter id="invoices2" text="{i18n>dataBindingFilter}" >
 									<!--<mvc:XMLView viewName="brait_app.view.VPInvoices"/>-->
-									<App class="myAppDemoWT" id="app"/>
+									<App class="myAppDemoWT" id="invoices"/>
 								</IconTabFilter>
-								<IconTabFilter text="prueba" key="bd">
+								<IconTabFilter text="prueba">
 									<mvc:XMLView viewName="brait_app.view.VPInvoices2"/>  
 								</IconTabFilter>
 							</items>
