"Step 4: Adding a Detail Page": Completado sin errores   :white_check_mark:

--- a/sap.f.tutorial.fiori.2.01/webapp/view/App.view.xml
+++ b/sap.f.tutorial.fiori.2.01/webapp/view/App.view.xml
@@ -7,5 +7,8 @@
 		<beginColumnPages>
 			<mvc:XMLView id="beginView" viewName="sap.ui.demo.fiori2.view.Master"/>
 		</beginColumnPages>
+		<midColumnPages>
+			<mvc:XMLView id="detailView" viewName="sap.ui.demo.fiori2.view.Detail"/>
+		</midColumnPages>
 	</FlexibleColumnLayout>
 </mvc:View>
