--- a/sap.f.tutorial.fiori.2.01/webapp/view/App.view.xml
+++ b/sap.f.tutorial.fiori.2.01/webapp/view/App.view.xml
@@ -1,14 +1,12 @@
 <mvc:View
+	controllerName="sap.ui.demo.fiori2.controller.App"
 	displayBlock="true"
 	height="100%"
 	xmlns="sap.f"
 	xmlns:mvc="sap.ui.core.mvc">
-		<FlexibleColumnLayout id="flexibleColumnLayout" backgroundDesign="Solid">
-		<beginColumnPages>
-			<mvc:XMLView id="beginView" viewName="sap.ui.demo.fiori2.view.Master"/>
-		</beginColumnPages>
-		<midColumnPages>
-			<mvc:XMLView id="detailView" viewName="sap.ui.demo.fiori2.view.Detail"/>
-		</midColumnPages>
-	</FlexibleColumnLayout>
+		<FlexibleColumnLayout
+		id="flexibleColumnLayout"
+		stateChange=".onStateChanged"
+		backgroundDesign="Solid"
+		layout="{/layout}"/>
 </mvc:View>
