--- a/sap.f.tutorial.fiori.2.01/webapp/view/Detail.view.xml
+++ b/sap.f.tutorial.fiori.2.01/webapp/view/Detail.view.xml
@@ -1,42 +1,25 @@
 <mvc:View
-	xmlns="sap.uxap"
-	xmlns:m="sap.m"
-	xmlns:f="sap.f"
-	xmlns:form="sap.ui.layout.form"
+	controllerName="sap.ui.demo.fiori2.controller.Detail"
+	xmlns="sap.uxap" 
+	xmlns:m="sap.m" 
+	xmlns:f="sap.f" 
+	xmlns:form="sap.ui.layout.form" 
 	xmlns:mvc="sap.ui.core.mvc">
-	<ObjectPageLayout
-		id="ObjectPageLayout"
-		showTitleInHeaderContent="true"
-		alwaysShowContentHeader="false"
-		preserveHeaderStateOnScroll="false"
-		headerContentPinnable="true"
-		isChildPage="true"
-		upperCaseAnchorBar="false">
+	<ObjectPageLayout id="ObjectPageLayout" showTitleInHeaderContent="true" alwaysShowContentHeader="false" preserveHeaderStateOnScroll="false"
+		headerContentPinnable="true" isChildPage="true" upperCaseAnchorBar="false">
 		<headerTitle>
 			<ObjectPageDynamicHeaderTitle>
 				<actions>
-					<m:ToggleButton
-						text="Edit"
-						type="Emphasized"/>
-					<m:Button
-						text="Delete"
-						type="Transparent"/>
-					<m:Button
-						text="Copy"
-						type="Transparent"/>
-					<m:Button
-						icon="sap-icon://action"
-						type="Transparent"/>
+					<m:ToggleButton text="Edit" type="Emphasized"/>
+					<m:Button text="Delete" type="Transparent"/>
+					<m:Button text="Copy" type="Transparent"/>
+					<m:Button icon="sap-icon://action" type="Transparent"/>
 				</actions>
 			</ObjectPageDynamicHeaderTitle>
 		</headerTitle>
 		<headerContent>
 			<m:FlexBox wrap="Wrap" fitContainer="true" alignItems="Stretch">
-				<f:Avatar
-					displaySize="L"
-					displayShape="Square"
-					class="sapUiTinyMarginEnd">
-				</f:Avatar>
+				<f:Avatar displaySize="L" displayShape="Square" class="sapUiTinyMarginEnd"></f:Avatar>
 				<m:VBox justifyContent="Center" class="sapUiSmallMarginEnd">
 					<m:Label text="Main Category"/>
 				</m:VBox>
@@ -53,16 +36,8 @@
 				<subSections>
 					<ObjectPageSubSection>
 						<blocks>
-							<form:SimpleForm
-								maxContainerCols="2"
-								editable="false"
-								layout="ResponsiveGridLayout"
-								labelSpanL="12"
-								labelSpanM="12"
-								emptySpanL="0"
-								emptySpanM="0"
-								columnsL="1"
-								columnsM="1">
+							<form:SimpleForm maxContainerCols="2" editable="false" layout="ResponsiveGridLayout" labelSpanL="12" labelSpanM="12" emptySpanL="0"
+								emptySpanM="0" columnsL="1" columnsM="1">
 								<form:content>
 									<m:Label text="Product ID"/>
 									<m:Label text="Description"/>
@@ -73,14 +48,11 @@
 					</ObjectPageSubSection>
 				</subSections>
 			</ObjectPageSection>
-
 			<ObjectPageSection title="Suppliers">
 				<subSections>
 					<ObjectPageSubSection>
 						<blocks>
-							<m:Table
-								id="suppliersTable"
-								items="{path : 'products>/ProductCollectionStats/Filters/1/values'}">
+							<m:Table id="suppliersTable" items="{path : 'products>/ProductCollectionStats/Filters/1/values'}">
 								<m:columns>
 									<m:Column/>
 								</m:columns>
@@ -97,5 +69,12 @@
 				</subSections>
 			</ObjectPageSection>
 		</sections>
+		<footer>
+			<m:OverflowToolbar>
+				<m:ToolbarSpacer/>
+				<m:Button type="Accept" text="Save"/>
+				<m:Button type="Reject" text="Cancel"/>
+			</m:OverflowToolbar>
+		</footer>
 	</ObjectPageLayout>
 </mvc:View>
