"Step 9: Adding a Detail-Detail Page": Completado sin errores  :white_check_mark:

--- a/sap.f.tutorial.fiori.2.01/webapp/view/Detail.view.xml
+++ b/sap.f.tutorial.fiori.2.01/webapp/view/Detail.view.xml
@@ -92,7 +92,7 @@
 									<m:Column/>
 								</m:columns>
 								<m:items>
-									<m:ColumnListItem type="Navigation">
+									<m:ColumnListItem type="Navigation" press=".onSupplierPress">
 										<m:cells>
 											<m:ObjectIdentifier text="{products>text}"/>
 										</m:cells>
