--- a/sap.f.tutorial.fiori.2.01/webapp/view/Detail.view.xml
+++ b/sap.f.tutorial.fiori.2.01/webapp/view/Detail.view.xml
@@ -24,6 +24,26 @@
 						</m:FlexBox>
 					</m:FlexBox>
 				</snappedHeading>
+				<navigationActions>
+					<m:OverflowToolbarButton
+						type="Transparent"
+						icon="sap-icon://full-screen"
+						press=".handleFullScreen"
+						tooltip="Enter Full Screen Mode"
+						visible="{= ${/actionButtonsInfo/midColumn/fullScreen} !== null }"/>
+					<m:OverflowToolbarButton
+						type="Transparent"
+						icon="sap-icon://exit-full-screen"
+						press=".handleExitFullScreen"
+						tooltip="Exit Full Screen Mode"
+						visible="{= ${/actionButtonsInfo/midColumn/exitFullScreen} !== null }"/>
+					<m:OverflowToolbarButton
+						type="Transparent"
+						icon="sap-icon://decline"
+						press=".handleClose"
+						tooltip="Close column"
+						visible="{= ${/actionButtonsInfo/midColumn/closeColumn} !== null }"/>
+				</navigationActions>
 				<actions>
 					<m:ToggleButton text="Edit" type="Emphasized"/>
 					<m:Button text="Delete" type="Transparent"/>
