"Step 2" Unificando en App principal  :leftwards_arrow_with_hook:

--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -21,7 +21,7 @@
 									<mvc:XMLView viewName="brait_app.view.VPInvoices2"/>  
 								</IconTabFilter>
 								<IconTabFilter text="prueba">
-									<mvc:XMLView viewName="brait_app.view.VSSqlUsers"/>
+									<mvc:XMLView viewName="brait_app.view.Fiori_App"/>
 								</IconTabFilter>
 							</items>
 						</IconTabBar>
