"Step 3" Unificando en App principal ↩️ y Eliminando carpeta antigua

--- a/webapp/view/Fiori_Master.view.xml
+++ b/webapp/view/Fiori_Master.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-	controllerName="sap.ui.demo.fiori2.controller.Master"
+	controllerName="brait_app.controller.Fiori_Master"
 	xmlns="sap.m"
 	xmlns:f="sap.f"
 	xmlns:mvc="sap.ui.core.mvc">
@@ -42,7 +42,7 @@
 						</Column>
 					</columns>
 					<items>
-						<ColumnListItem type="Navigation" press=".onListItemPress">
+						<ColumnListItem type="Navigation">
 							<cells>
 								<ObjectIdentifier title="{products>Name}" text="{products>ProductId}"/>
 								<ObjectNumber
