--- a/webapp/view/Fiori_App.view.xml
+++ b/webapp/view/Fiori_App.view.xml
@@ -3,7 +3,7 @@
 	height="100%"
 	xmlns="sap.f"
 	xmlns:mvc="sap.ui.core.mvc">
-		<FlexibleColumnLayout id="flexibleColumnLayout" backgroundDesign="Solid">
+		<FlexibleColumnLayout id="flexibleColumnLayout" stateChange="onStateChanged" backgroundDesign="Solid">
 		<beginColumnPages>
 			<mvc:XMLView id="beginView" viewName="brait_app.view.Fiori_Master"/>
 		</beginColumnPages>
