--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,6 +1,6 @@
 <mvc:View displayBlock="true" xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout" xmlns:f="sap.ui.layout.form"
 	xmlns="sap.m" controllerName="brait_app.controller.App">
-	<Shell>
+	<!-- <Shell> -->
 		<App id="principal">
 			<pages>
 				<Page title="openSAP - Developing with SAPUI5">
@@ -29,5 +29,5 @@
 				</Page>
 			</pages>
 		</App>
-	</Shell>
+	<!-- </Shell> -->
 </mvc:View>
