--- a/webapp/view/Fiori_App.view.xml
+++ b/webapp/view/Fiori_App.view.xml
@@ -1,14 +1,13 @@
 <mvc:View
+	contrllerName="brait_app.controller.Fiori_App"
 	displayBlock="true"
 	height="100%"
 	xmlns="sap.f"
 	xmlns:mvc="sap.ui.core.mvc">
-		<FlexibleColumnLayout id="flexibleColumnLayout" stateChange="onStateChanged" backgroundDesign="Solid">
-		<beginColumnPages>
-			<mvc:XMLView id="beginView" viewName="brait_app.view.Fiori_Master"/>
-		</beginColumnPages>
-		<midColumnPages>
-			<mvc:XMLView id="detailView" viewName="brait_app.view.Fiori_Detail"/>
-		</midColumnPages>
-	</FlexibleColumnLayout>
+	<FlexibleColumnLayout
+		id="flexibleColumnLayout"
+		stateChange=".onStateChanged"
+		backgroundDesign="Solid"
+		layout="{/layout}"
+	/>
 </mvc:View>
