--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,7 +1,7 @@
 <mvc:View displayBlock="true" xmlns:mvc="sap.ui.core.mvc" xmlns:core="sap.ui.core" xmlns:l="sap.ui.layout" xmlns:f="sap.ui.layout.form"
 	xmlns="sap.m" controllerName="brait_app.controller.App">
-	<!-- <Shell> -->
-		<App id="principal">
+	<!-- <Shell> //esto es una prueba--> 	
+	<App id="principal">
 			<pages>
 				<Page title="openSAP - Developing with SAPUI5">
 					<content>
