"Step 2: KPI Tile and Chart Tile on the Start Page" 50%

--- a/SmartControls/webapp/view/App.view.xml
+++ b/SmartControls/webapp/view/App.view.xml
@@ -3,9 +3,9 @@
 	xmlns="sap.m"
 	displayBlock="true">
 
-	<Shell>
+	<!-- <Shell> -->
 		<App id="tutorialApp"
 			 backgroundImage="images/startpage.jpg"
 			 backgroundOpacity="0.3"/>
-	</Shell>
+	<!-- </Shell> -->
 </mvc:View>
