"Step 2: KPI Tile and Chart Tile on the Start Page": Completado sin errores ✅

--- a/SmartControls/webapp/view/Startpage.view.xml
+++ b/SmartControls/webapp/view/Startpage.view.xml
@@ -2,7 +2,8 @@
 	controllerName="sap.suite.ui.commons.demokit.tutorial.icecream.01.controller.Startpage"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.m"
-	xmlns:layout="sap.ui.layout">
+	xmlns:layout="sap.ui.layout"
+	xmlns:microchart="sap.suite.ui.microchart">
 	<Page title="{i18n>title}">
 		<layout:VerticalLayout class="sapUiResponsiveMargin">
 			<Title
@@ -46,6 +47,49 @@
                      </tileContent>
                  </GenericTile>
 			</layout:HorizontalLayout>
+			<GenericTile
+                     class="sapUiTinyMarginBegin sapUiTinyMarginTop"
+                     header="{
+                         parts: [
+                             'i18n>startpageCCTileTitle',
+                             'business>/year',
+                             'business>/currency'
+                         ],
+                         formatter: '.formatMessage'
+                     }">
+                     <tileContent>
+                         <TileContent>
+                             <content>
+                                 <microchart:BulletMicroChart
+                                     size="Responsive"
+                                     targetValue="{business>/plannedExpenses}"
+                                     targetValueLabel="{
+                                        path: 'business>/plannedExpenses',
+                                        formatter: '.formatNumber'
+                                    }"
+                                     actualValueLabel="{
+                                        path: 'business>/expenses',
+                                        formatter: '.formatNumber'
+                                    }"
+                                     minValue="0">
+                                     <microchart:actual>
+                                         <microchart:BulletMicroChartData
+                                             value="{business>/expenses}"
+                                             color="Critical" />
+                                     </microchart:actual>
+                                     <microchart:thresholds>
+                                         <microchart:BulletMicroChartData
+                                             value="{business>/expensesCritical}"
+                                             color="Critical" />
+                                         <microchart:BulletMicroChartData
+                                             value="{business>/budget}"
+                                             color="Error" />
+                                     </microchart:thresholds>
+                                 </microchart:BulletMicroChart>
+                             </content>
+                         </TileContent>
+                     </tileContent>
+                 </GenericTile> 
 		</layout:VerticalLayout>
 	</Page>
 </mvc:View>
