"Step 3: Launch Tile and Slide Tile":  Completado sin errores ✅

--- a/SmartControls/webapp/view/Startpage.view.xml
+++ b/SmartControls/webapp/view/Startpage.view.xml
@@ -46,8 +46,8 @@
                          </TileContent>
                      </tileContent>
                  </GenericTile>
-			</layout:HorizontalLayout>
-			<GenericTile
+                 
+                 <GenericTile
                      class="sapUiTinyMarginBegin sapUiTinyMarginTop"
                      header="{
                          parts: [
@@ -90,6 +90,45 @@
                          </TileContent>
                      </tileContent>
                  </GenericTile> 
+                 
+                 <GenericTile
+                    class="sapUiTinyMarginBegin sapUiTinyMarginTop"
+                    header="{i18n>startpageTestResultsTileTitle}"
+                    subheader="{i18n>startpageTestResultsTileSubTitle}">
+                    <tileContent>
+                        <TileContent>
+                            <content>
+                                <ImageContent src="sap-icon://temperature" />
+                            </content>
+                        </TileContent>
+                    </tileContent>
+                </GenericTile>
+                 
+                <SlideTile
+                    class="sapUiTinyMarginBegin sapUiTinyMarginTop"
+                    tiles="{news>/News}">
+                    <GenericTile
+                        backgroundImage="{news>image}"
+                        state="{news>state}"
+                        frameType="TwoByOne">
+                        <tileContent>
+                            <TileContent
+                                footer="{
+                                    path: 'news>date',
+                                    formatter: '.formatJSONDate'
+                                }">
+                                <content>
+                                    <NewsContent
+                                        contentText="{news>content}"
+                                        subheader="{news>subheader}">
+                                    </NewsContent>
+                                </content>
+                            </TileContent>
+                        </tileContent>
+                    </GenericTile>
+                </SlideTile>
+                 
+			</layout:HorizontalLayout>
 		</layout:VerticalLayout>
 	</Page>
 </mvc:View>
